apps/shiplog/src/render/md/snapshots/shiplog__render__md__tests__snapshot_empty_packet.snap
---
source: apps/shiplog/src/render/md/mod.rs
expression: result
---
# Summary

**Window:** 2024

**Workstreams:** 0

**Events:** 0 PRs, 0 reviews, 0 manual events

**Coverage:** Complete

**Sources:** none recorded

## Executive Summary

_No workstreams yet — no evidence has been clustered into a workstream._

## Workstreams

_No workstreams found_

## Receipts

_No workstreams, no receipts_

## Coverage and Limits

Included:
- No completed sources recorded
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- None recorded

Details:
- **Date window:** 2024-01-01 to 2024-12-31
- **Mode:** test
- **Sources:** none recorded
- **Completeness:** Complete

## Appendix: All Receipts

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
