apps/shiplog/src/render/md/snapshots/shiplog__render__md__tests__snapshot_full_packet.snap
---
source: apps/shiplog/src/render/md/mod.rs
expression: result
---
# Summary

**Window:** 2024

**Workstreams:** 1

**Events:** 1 PR, 0 reviews, 1 manual event

**Coverage:** Complete

**Sources:** GitHub, Manual

## Executive Summary

- **Authentication** — 1 PR, 0 reviews, 0 manual events

## Workstreams

### Authentication

Fixed auth bugs and improved security

**Evidence anchors**

- [PR] Fix authentication bug (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Authentication

- [PR] Fix authentication bug (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)

## Coverage and Limits

Included:
- GitHub: 1 event
- Manual: 1 event
- Fetched events: not reported by query slices

Skipped:
- None recorded

Known gaps:
- Manual events are user-provided

Details:
- **Date window:** 2024-01-01 to 2024-12-31
- **Mode:** test
- **Sources:** GitHub, Manual
- **Completeness:** Complete

## Appendix: All Receipts

### Authentication

- [PR] Fix authentication bug (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
