apps/shiplog/src/render/md/snapshots/shiplog__render__md__tests__snapshot_partial_coverage.snap
---
source: apps/shiplog/src/render/md/mod.rs
expression: result
---
# Summary

**Window:** 2024

**Workstreams:** 1

**Events:** 1 PR, 0 reviews, 0 manual events

**Coverage:** Partial

**Sources:** GitHub

**Warnings:**
  - ⚠️ API rate limit hit

## Executive Summary

- **Feature** — 1 PR, 0 reviews, 0 manual events

_Skipped sources and gaps: see `## Coverage and Limits` for the receipted list._

## Workstreams

### Feature

**Evidence anchors**

- [PR] Add feature (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)

**Suggested claim prompts**

- What changed for users, operators, or maintainers?
- Which risk, delay, or repeated work did this reduce?
- Which evidence anchor best proves the change?
- What follow-up or gap should a reviewer know about?

_PRs: 1, Reviews: 0, Manual: 0_

## Receipts

### Workstream: Feature

- [PR] Add feature (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)

## Coverage and Limits

Included:
- GitHub: 1 event
- Query slices: 1 slice, fetched 50 of 100 reported results

Skipped:
- None recorded

Known gaps:
- Overall completeness is Partial
- API rate limit hit
- 1 query slice reported incomplete results
- 1 query slice fetched fewer results than reported

Details:
- **Date window:** 2024-01-01 to 2024-12-31
- **Mode:** test
- **Sources:** GitHub
- **Completeness:** Partial
- **Query slices:** 1
  - ⚠️ 1 slices had incomplete results
  - **Slicing applied (API caps):**
    - test: fetched 50/100 (50%)

## Appendix: All Receipts

### Feature

- [PR] Add feature (1970-01-01) — [owner/repo](https://github.com/owner/repo/pull/1)

---

## File Artifacts

- `packet.md` (this review packet)
- `ledger.events.jsonl` (canonical events)
- `coverage.manifest.json` (completeness + slicing)
- `workstreams.suggested.yaml` (auto-generated workstream suggestions)
- `workstreams.yaml` (curated workstreams, created after edits)
- `bundle.manifest.json` (artifact manifest and checksums)
